qnode41_prod_arch_env/qnode41_app/templates/03-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qnode41-app
  namespace: qnode41
  labels:
    app: qnode41-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: qnode41-app
  template:
    metadata:
      namespace: qnode41
      labels:
        app: qnode41-app
    spec:
      restartPolicy: Always
      containers:
        - name: qnode41-app
          image: smartquail/qnode41_app:latest
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 80
          resources:
            requests:
               cpu: "800m"
               memory: "128Mi"
            limits:
               cpu: "1000m"
               memory: "256Mi"
