qnode41_prod_arch_env/qnode41_app/templates/04-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: qnode41-svc
  namespace: qnode41
  labels:
    app: qnode41-app
spec:
  selector:
    app: qnode41-app
  ports:
   - name: http
     protocol: TCP
     port: 80
     targetPort: 9000
