qnode41_prod_arch_env/qnode41_app/templates/08-postgres.yml
apiVersion: v1
kind: Service
metadata:
  name: smartquaildb
  namespace: qnode41
  labels:
    app: smartquaildb
spec:
  type: ExternalName
  externalName: smartquaildb.postgres.svc.cluster.local
  ports:
  - port: 5432
    protocol: TCP
