qnode41_prod_arch_env/qnode41_app/templates/06-QNODE41-INGRESS.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qnode41-ingress
  namespace: qnode41
 # annotations:
 #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
 # ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: qnode41-svc
            port:
              number: 80
